# SyncFiles

./: .gitignore  README.md  RELEASE_NOTES.md  SyncFiles.spec  pyproject.toml
docs/superpowers/plans/: 2026-06-20-chinese-language-mode.md  2026-06-20-syncfiles-desktop.md  2026-06-21-progress-optimization.md  2026-06-21-sftp-sync.md  2026-06-21-sync-mode-selection.md
docs/superpowers/specs/: 2026-06-20-chinese-language-mode-design.md  2026-06-20-syncfiles-desktop-design.md  2026-06-21-progress-optimization-design.md  2026-06-21-sftp-sync-design.md  2026-06-21-sync-mode-selection-design.md
src/syncfiles/: __init__.py  __main__.py  adb.py  app.py  domain.py  executor.py  i18n.py  local_executor.py  local_fs.py  progress.py  sftp.py  sftp_executor.py
tests/: conftest.py  test_adb.py  test_app.py  test_domain.py  test_executor.py  test_executor_progress.py  test_i18n.py  test_local_executor.py  test_local_fs.py  test_progress.py  test_sftp.py  test_sftp_executor.py
