[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "syncfiles"
version = "0.2.0"
description = "Desktop ADB folder synchronization helper"
requires-python = ">=3.11"
dependencies = ["paramiko>=3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
syncfiles = "syncfiles.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
